--- a/style/blog.css
+++ b/style/blog.css
@@ -80,6 +80,9 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+}
 
 /* about styles */
 .about{
@@ -107,3 +110,64 @@ main{
 .about-info{
     text-align: center;
 }
+
+/* skils related skils */
+
+
+#what-i-do-description{
+    padding: 30px 150px;
+}
+.skils-container{
+    display: flex;
+    gap: 24px;
+    justify-content: space-around;
+}
+.skils{
+    padding: 30px;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
+}
+.skils-description{
+    color: #757575;
+}
+
+/* Resume section style */
+
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-institute, .resume-item-description, hr{
+    color: #757575;
+
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.resume-item-institute{
+    font-size: 20px;
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+.resume-item-description{
+    font-size: 16px;
+}
+.resume-container hr{
+    margin: 30px 0px;
+}
+
+.download-cv{
+    text-align: center;
+    margin: 80px;
+}
+
