--- a/style/blog.css
+++ b/style/blog.css
@@ -171,3 +171,24 @@ main section{
     margin: 80px;
 }
 
+/* footer section title */
+footer{
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+.contact input[type="text"],.contact input[type="email"],textarea{
+    display: block;
+    margin-bottom: 24px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    width: 100%;
+    border: none;
+}
