--- a/style/blog.css
+++ b/style/blog.css
@@ -190,5 +190,10 @@ footer{
     border-radius: 5px;
     background: #FFF;
     width: 100%;
+    font-size: 16px;
     border: none;
+}
+
+.social-link img{
+    margin-right: 20px;
 }
